completed and added the delete method and the update method

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -3,7 +3,7 @@
   <%= f.text_field :title %>
   <%= f.label :details %>
   <%= f.text_field :details %>
-  <%= f.submit 'Create New Task' %>
+  <%= f.submit 'Update Task' %>
 <% end %>
 
 <%= link_to 'Go back to tasks', '/tasks' %>
